--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@ html {
 a {
   color: #f00;
 }
+h2 {
+  font-size: 30px;
+}
+
 
 /* SOCIAL STYLES */
 .social-link {
@@ -22,6 +26,7 @@ a {
 
 .bio-box {
   border: 1px solid black;
+  width: 200px;
 }
 
 .bio-copy a {
